 <ScrollView
           xmlns:android="http://schemas.android.com/apk/res/android"
   			 xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#e8e8e7"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="#13b586"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam" >
            
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/app_icon"
                tools:ignore="ContentDescription" />
        
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center_horizontal|center_vertical"
        	    android:layout_marginLeft="25dp"
        	    android:text="@string/login"
        	    android:textColor="#ffffff"
        	    android:textSize="18sp"
        	    android:textStyle="bold"
        	    tools:ignore="HardcodedText" />
        	
        	<LinearLayout  
        	     android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="right"
            android:orientation="horizontal" >
            
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/tick"
               tools:ignore="ContentDescription" />
        
        </LinearLayout>
    </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/greybackground"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c00000"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="0.53"
                android:background="@drawable/cup"
                tools:ignore="InefficientWeight,ContentDescription" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="#f3f3f3"
                android:hint="Email Address"
                android:paddingLeft="5dp"
                android:textColor="#f3f3f3"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="Password"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_here"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="click"
                    tools:ignore="HardcodedText,SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/_"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SpUsage" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="click"
                    tools:ignore="HardcodedText,SpUsage" />

            </LinearLayout>

            <Button
                android:id="@+id/Login_Button"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="#13b586"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="13dp"
                tools:ignore="SpUsage" />

        </LinearLayout>
    
</LinearLayout>
        
    
 
    </ScrollView>